# $Id: CHANGELOG 776 2008-12-7 01:30:27Z dane $

----------------
Mapnik Changelog
----------------
 
A simple log of core changes affecting Mapnik usage.

Developers: Please commit along with changes.

For a complete change history, see the SVN log.


Current Version (0.6.0-dev, SVN trunk):
---------------------------------------
- OGCServer: Enabled friendly html output when in debug mode (debug=1 in ogcserver.conf) (r899)

- Filter parsing: Allow numbers in the filter field name.
  This allows for shapefiles with columns like '1970'.

- Plugins: Added OGR driver for reading all OGR supported formats (kunitoki) (r836) (#170)

- Python: Made available the scale_denominator property from the map in c++ and python (r793)

- Python: Added ability to resize map and clear all layers and styles from python (r793)

- Python: Exposed Proj to/from transformation for projected coordinate systems (r792,r822) (#117)

- XML: Added xml serialization for abstract, title, minzoom, maxzoom, and queryable attributes (r787)