@@ -13,6 +13,9 @@ For a complete change history, see the SVN log.
 
 Current Version (0.6.0-dev, SVN trunk):
 ---------------------------------------
+
+- OGCServer: Added support for load_map(), allowing reading of XML styles and layers (r901)
+
 - OGCServer: Enabled friendly html output when in debug mode (debug=1 in ogcserver.conf) (r899)
 
 - Filter parsing: Allow numbers in the filter field name.
